--- a/dinos.html
+++ b/dinos.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Dinosaurs
+mata: All the dinosaurs tahat ever eisted in the world.
 ---
 <div class="grid"> 
 	<div class="unit unit-s-1 unit-m-1-2 unitl-1-3">
