--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
 ---
 layout: default
 title: Home
+meta: "Covering everything dinasour-ralated: links, photos, videos, info."
+showbanner: yes
+bannertext: Dinasaurs Rocks!
 ---
 <h1>Dino "R" Us</h1>
 <p>grekgnekgjegmeklrgnelkgnlegnkegnelkglegnerngergnlkergnelrg</p>
+
+<div class="grid">
+	<div class="gutter unit unit-s1 unit-m-1-3 unit-l-13">
+		{% include promo-small.html title="Promo 1" desc="Super-duper sale!" image="air-dinos/pteranodon.jpg" %}
+	</div>
+	<div class="gutter unit unit-s1 unit-m-1-3 unit-l-13">
+		{% include promo-small.html title="Promo 2" desc="Another amazing deal!" image="air-dinos/archeopteryx.jpg" %}
+
+	</div>
+	<div class="gutter unit unit-s1 unit-m-1-3 unit-l-13">
+		{% include promo-small.html title="Promo 3" desc="Fantastico!" image="land-dinos/iguanodon.jpg" %}
+	</div>
+</div>
